--- a/src/components/PixelPet/PixelPet.module.css
+++ b/src/components/PixelPet/PixelPet.module.css
@@ -3,7 +3,7 @@
   position: absolute;
   width: 8.33%; /* 32px / 384px = 8.33% */
   aspect-ratio: 1 / 1;
-  z-index: 20;
+  z-index: 3;
   transform-origin: center;
 }
 
